@@ -16,30 +16,6 @@
  */
 package org.asamk.signal.manager;
 
-import java.io.ByteArrayInputStream;
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStream;
-import java.net.URI;
-import java.nio.charset.StandardCharsets;
-import java.time.Duration;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.concurrent.locks.ReentrantLock;
-import java.util.function.Function;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
 import org.asamk.signal.manager.api.AlreadyReceivingException;
 import org.asamk.signal.manager.api.AttachmentInvalidException;
 import org.asamk.signal.manager.api.Configuration;
@@ -107,6 +83,30 @@ import org.whispersystems.signalservice.api.util.StreamDetails;
 import org.whispersystems.signalservice.internal.util.Hex;
 import org.whispersystems.signalservice.internal.util.Util;
 
+import java.io.ByteArrayInputStream;
+import java.io.File;
+import java.io.IOException;
+import java.io.InputStream;
+import java.net.URI;
+import java.nio.charset.StandardCharsets;
+import java.time.Duration;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.locks.ReentrantLock;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
 import io.reactivex.rxjava3.disposables.CompositeDisposable;
 
 class ManagerImpl implements Manager {
@@ -127,8 +127,13 @@ class ManagerImpl implements Manager {
     private final List<Runnable> addressChangedListeners = new ArrayList<>();
     private final CompositeDisposable disposable = new CompositeDisposable();
 
-    ManagerImpl(SignalAccount account, PathConfig pathConfig, AccountFileUpdater accountFileUpdater,
-            ServiceEnvironmentConfig serviceEnvironmentConfig, String userAgent) {
+    ManagerImpl(
+            SignalAccount account,
+            PathConfig pathConfig,
+            AccountFileUpdater accountFileUpdater,
+            ServiceEnvironmentConfig serviceEnvironmentConfig,
+            String userAgent
+    ) {
         this.account = account;
 
         final var sessionLock = new SignalSessionLock() {
@@ -140,8 +145,12 @@ class ManagerImpl implements Manager {
                 return LEGACY_LOCK::unlock;
             }
         };
-        this.dependencies = new SignalDependencies(serviceEnvironmentConfig, userAgent,
-                account.getCredentialsProvider(), account.getSignalServiceDataStore(), executor, sessionLock);
+        this.dependencies = new SignalDependencies(serviceEnvironmentConfig,
+                userAgent,
+                account.getCredentialsProvider(),
+                account.getSignalServiceDataStore(),
+                executor,
+                sessionLock);
         final var avatarStore = new AvatarStore(pathConfig.avatarsPath());
         final var attachmentStore = new AttachmentStore(pathConfig.attachmentsPath());
         final var stickerPackStore = new StickerPackStore(pathConfig.stickerPacksPath());
@@ -175,9 +184,12 @@ class ManagerImpl implements Manager {
             final var recipientId = account.getRecipientResolver().resolveRecipient(serviceId);
             final var profile = account.getProfileStore().getProfile(recipientId);
             if (profile != null) {
-                account.getProfileStore().storeProfile(recipientId,
-                        Profile.newBuilder(profile).withUnidentifiedAccessMode(Profile.UnidentifiedAccessMode.UNKNOWN)
-                                .withLastUpdateTimestamp(0).build());
+                account.getProfileStore()
+                        .storeProfile(recipientId,
+                                Profile.newBuilder(profile)
+                                        .withUnidentifiedAccessMode(Profile.UnidentifiedAccessMode.UNKNOWN)
+                                        .withLastUpdateTimestamp(0)
+                                        .build());
             }
         }));
     }
@@ -191,7 +203,6 @@ class ManagerImpl implements Manager {
         context.getAccountHelper().checkAccountState();
     }
 
-    @SuppressWarnings("null")
     @Override
     public Map<String, UserStatus> getUserStatus(Set<String> numbers) throws IOException {
         final var canonicalizedNumbers = numbers.stream().collect(Collectors.toMap(n -> n, n -> {
@@ -207,7 +218,9 @@ class ManagerImpl implements Manager {
         }));
 
         // Note "registeredUsers" has no optionals. It only gives us info on users who are registered
-        final var canonicalizedNumbersSet = canonicalizedNumbers.values().stream().filter(s -> !s.isEmpty())
+        final var canonicalizedNumbersSet = canonicalizedNumbers.values()
+                .stream()
+                .filter(s -> !s.isEmpty())
                 .collect(Collectors.toSet());
         final var registeredUsers = context.getRecipientHelper().getRegisteredUsers(canonicalizedNumbersSet);
 
@@ -215,10 +228,12 @@ class ManagerImpl implements Manager {
             final var number = canonicalizedNumbers.get(n);
             final var user = registeredUsers.get(number);
             final var serviceId = user == null ? null : user.getServiceId();
-            final var profile = serviceId == null ? null
+            final var profile = serviceId == null
+                    ? null
                     : context.getProfileHelper()
                             .getRecipientProfile(account.getRecipientResolver().resolveRecipient(serviceId));
-            return new UserStatus(number.isEmpty() ? null : number, serviceId == null ? null : serviceId.uuid(),
+            return new UserStatus(number.isEmpty() ? null : number,
+                    serviceId == null ? null : serviceId.uuid(),
                     profile != null
                             && profile.getUnidentifiedAccessMode() == Profile.UnidentifiedAccessMode.UNRESTRICTED);
         }));
@@ -240,7 +255,9 @@ class ManagerImpl implements Manager {
     }
 
     @Override
-    public void updateConfiguration(Configuration configuration) throws NotPrimaryDeviceException {
+    public void updateConfiguration(
+            Configuration configuration
+    ) throws NotPrimaryDeviceException {
         if (!account.isPrimaryDevice()) {
             throw new NotPrimaryDeviceException();
         }
@@ -263,11 +280,15 @@ class ManagerImpl implements Manager {
 
     @Override
     public void updateProfile(UpdateProfile updateProfile) throws IOException {
-        context.getProfileHelper().setProfile(updateProfile.getGivenName(), updateProfile.getFamilyName(),
-                updateProfile.getAbout(), updateProfile.getAboutEmoji(),
-                updateProfile.isDeleteAvatar() ? Optional.empty()
-                        : updateProfile.getAvatar() == null ? null : Optional.of(updateProfile.getAvatar()),
-                updateProfile.getMobileCoinAddress());
+        context.getProfileHelper()
+                .setProfile(updateProfile.getGivenName(),
+                        updateProfile.getFamilyName(),
+                        updateProfile.getAbout(),
+                        updateProfile.getAboutEmoji(),
+                        updateProfile.isDeleteAvatar()
+                                ? Optional.empty()
+                                : updateProfile.getAvatar() == null ? null : Optional.of(updateProfile.getAvatar()),
+                        updateProfile.getMobileCoinAddress());
         context.getSyncHelper().sendSyncFetchProfileMessage();
     }
 
@@ -301,10 +322,9 @@ class ManagerImpl implements Manager {
 
     @Override
     public void submitRateLimitRecaptchaChallenge(String challenge, String captcha) throws IOException {
-        String _captcha = captcha;
-        _captcha = _captcha == null ? null : _captcha.replace("signalcaptcha://", "");
+        captcha = captcha == null ? null : captcha.replace("signalcaptcha://", "");
 
-        dependencies.getAccountManager().submitRateLimitRecaptchaChallenge(challenge, _captcha);
+        dependencies.getAccountManager().submitRateLimitRecaptchaChallenge(challenge, captcha);
     }
 
     @Override
@@ -321,9 +341,12 @@ class ManagerImpl implements Manager {
                     logger.debug("Failed to decrypt device name, maybe plain text?", e);
                 }
             }
-            return new Device(d.getId(), deviceName, d.getCreated(), d.getLastSeen(),
+            return new Device(d.getId(),
+                    deviceName,
+                    d.getCreated(),
+                    d.getLastSeen(),
                     d.getId() == account.getDeviceId());
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     @Override
@@ -360,7 +383,7 @@ class ManagerImpl implements Manager {
 
     @Override
     public List<Group> getGroups() {
-        return account.getGroupStore().getGroups().stream().map(this::toGroup).collect(Collectors.toList());
+        return account.getGroupStore().getGroups().stream().map(this::toGroup).toList();
     }
 
     private Group toGroup(final GroupInfo groupInfo) {
@@ -372,9 +395,9 @@ class ManagerImpl implements Manager {
     }
 
     @Override
-    public SendGroupMessageResults quitGroup(GroupId groupId, Set<RecipientIdentifier.Single> groupAdmins)
-            throws GroupNotFoundException, IOException, NotAGroupMemberException, LastGroupAdminException,
-            UnregisteredRecipientException {
+    public SendGroupMessageResults quitGroup(
+            GroupId groupId, Set<RecipientIdentifier.Single> groupAdmins
+    ) throws GroupNotFoundException, IOException, NotAGroupMemberException, LastGroupAdminException, UnregisteredRecipientException {
         final var newAdmins = context.getRecipientHelper().resolveRecipients(groupAdmins);
         return context.getGroupHelper().quitGroup(groupId, newAdmins);
     }
@@ -390,130 +413,153 @@ class ManagerImpl implements Manager {
     }
 
     @Override
-    public Pair<GroupId, SendGroupMessageResults> createGroup(String name, Set<RecipientIdentifier.Single> members,
-            String avatarFile) throws IOException, AttachmentInvalidException, UnregisteredRecipientException {
-        return context.getGroupHelper().createGroup(name,
-                members == null ? null : context.getRecipientHelper().resolveRecipients(members), avatarFile);
+    public Pair<GroupId, SendGroupMessageResults> createGroup(
+            String name, Set<RecipientIdentifier.Single> members, String avatarFile
+    ) throws IOException, AttachmentInvalidException, UnregisteredRecipientException {
+        return context.getGroupHelper()
+                .createGroup(name,
+                        members == null ? null : context.getRecipientHelper().resolveRecipients(members),
+                        avatarFile);
     }
 
     @Override
-    public SendGroupMessageResults updateGroup(final GroupId groupId, final UpdateGroup updateGroup)
-            throws IOException, GroupNotFoundException, AttachmentInvalidException, NotAGroupMemberException,
-            GroupSendingNotAllowedException, UnregisteredRecipientException {
-        return context.getGroupHelper().updateGroup(groupId, updateGroup.getName(), updateGroup.getDescription(),
-                updateGroup.getMembers() == null ? null
-                        : context.getRecipientHelper().resolveRecipients(updateGroup.getMembers()),
-                updateGroup.getRemoveMembers() == null ? null
-                        : context.getRecipientHelper().resolveRecipients(updateGroup.getRemoveMembers()),
-                updateGroup.getAdmins() == null ? null
-                        : context.getRecipientHelper().resolveRecipients(updateGroup.getAdmins()),
-                updateGroup.getRemoveAdmins() == null ? null
-                        : context.getRecipientHelper().resolveRecipients(updateGroup.getRemoveAdmins()),
-                updateGroup.getBanMembers() == null ? null
-                        : context.getRecipientHelper().resolveRecipients(updateGroup.getBanMembers()),
-                updateGroup.getUnbanMembers() == null ? null
-                        : context.getRecipientHelper().resolveRecipients(updateGroup.getUnbanMembers()),
-                updateGroup.isResetGroupLink(), updateGroup.getGroupLinkState(), updateGroup.getAddMemberPermission(),
-                updateGroup.getEditDetailsPermission(), updateGroup.getAvatarFile(), updateGroup.getExpirationTimer(),
-                updateGroup.getIsAnnouncementGroup());
+    public SendGroupMessageResults updateGroup(
+            final GroupId groupId, final UpdateGroup updateGroup
+    ) throws IOException, GroupNotFoundException, AttachmentInvalidException, NotAGroupMemberException, GroupSendingNotAllowedException, UnregisteredRecipientException {
+        return context.getGroupHelper()
+                .updateGroup(groupId,
+                        updateGroup.getName(),
+                        updateGroup.getDescription(),
+                        updateGroup.getMembers() == null
+                                ? null
+                                : context.getRecipientHelper().resolveRecipients(updateGroup.getMembers()),
+                        updateGroup.getRemoveMembers() == null
+                                ? null
+                                : context.getRecipientHelper().resolveRecipients(updateGroup.getRemoveMembers()),
+                        updateGroup.getAdmins() == null
+                                ? null
+                                : context.getRecipientHelper().resolveRecipients(updateGroup.getAdmins()),
+                        updateGroup.getRemoveAdmins() == null
+                                ? null
+                                : context.getRecipientHelper().resolveRecipients(updateGroup.getRemoveAdmins()),
+                        updateGroup.getBanMembers() == null
+                                ? null
+                                : context.getRecipientHelper().resolveRecipients(updateGroup.getBanMembers()),
+                        updateGroup.getUnbanMembers() == null
+                                ? null
+                                : context.getRecipientHelper().resolveRecipients(updateGroup.getUnbanMembers()),
+                        updateGroup.isResetGroupLink(),
+                        updateGroup.getGroupLinkState(),
+                        updateGroup.getAddMemberPermission(),
+                        updateGroup.getEditDetailsPermission(),
+                        updateGroup.getAvatarFile(),
+                        updateGroup.getExpirationTimer(),
+                        updateGroup.getIsAnnouncementGroup());
     }
 
     @Override
-    public Pair<GroupId, SendGroupMessageResults> joinGroup(GroupInviteLinkUrl inviteLinkUrl)
-            throws IOException, InactiveGroupLinkException, PendingAdminApprovalException {
+    public Pair<GroupId, SendGroupMessageResults> joinGroup(
+            GroupInviteLinkUrl inviteLinkUrl
+    ) throws IOException, InactiveGroupLinkException, PendingAdminApprovalException {
         return context.getGroupHelper().joinGroup(inviteLinkUrl);
     }
 
-    private SendMessageResults sendMessage(SignalServiceDataMessage.Builder messageBuilder,
-            Set<RecipientIdentifier> recipients)
-            throws IOException, NotAGroupMemberException, GroupNotFoundException, GroupSendingNotAllowedException {
+    private SendMessageResults sendMessage(
+            SignalServiceDataMessage.Builder messageBuilder, Set<RecipientIdentifier> recipients
+    ) throws IOException, NotAGroupMemberException, GroupNotFoundException, GroupSendingNotAllowedException {
         var results = new HashMap<RecipientIdentifier, List<SendMessageResult>>();
         long timestamp = System.currentTimeMillis();
         messageBuilder.withTimestamp(timestamp);
         for (final var recipient : recipients) {
-            if (recipient instanceof RecipientIdentifier.Single) {
+            if (recipient instanceof RecipientIdentifier.Single single) {
                 try {
-                    final var recipientId = context.getRecipientHelper()
-                            .resolveRecipient(((RecipientIdentifier.Single) recipient));
+                    final var recipientId = context.getRecipientHelper().resolveRecipient(single);
                     final var result = context.getSendHelper().sendMessage(messageBuilder, recipientId);
                     results.put(recipient, List.of(toSendMessageResult(result)));
                 } catch (UnregisteredRecipientException e) {
-                    results.put(recipient, List.of(SendMessageResult.unregisteredFailure(
-                            ((RecipientIdentifier.Single) recipient).toPartialRecipientAddress())));
+                    results.put(recipient,
+                            List.of(SendMessageResult.unregisteredFailure(single.toPartialRecipientAddress())));
                 }
             } else if (recipient instanceof RecipientIdentifier.NoteToSelf) {
                 final var result = context.getSendHelper().sendSelfMessage(messageBuilder);
                 results.put(recipient, List.of(toSendMessageResult(result)));
-            } else if (recipient instanceof RecipientIdentifier.Group) {
-                final var result = context.getSendHelper().sendAsGroupMessage(messageBuilder,
-                        ((RecipientIdentifier.Group) recipient).groupId());
-                results.put(recipient, result.stream().map(this::toSendMessageResult).collect(Collectors.toList()));
+            } else if (recipient instanceof RecipientIdentifier.Group group) {
+                final var result = context.getSendHelper().sendAsGroupMessage(messageBuilder, group.groupId());
+                results.put(recipient, result.stream().map(this::toSendMessageResult).toList());
             }
         }
         return new SendMessageResults(timestamp, results);
     }
 
-    private SendMessageResult toSendMessageResult(
-            final org.whispersystems.signalservice.api.messages.SendMessageResult result) {
+    private SendMessageResult toSendMessageResult(final org.whispersystems.signalservice.api.messages.SendMessageResult result) {
         return SendMessageResult.from(result, account.getRecipientResolver(), account.getRecipientAddressResolver());
     }
 
-    private SendMessageResults sendTypingMessage(SignalServiceTypingMessage.Action action,
-            Set<RecipientIdentifier> recipients)
-            throws IOException, NotAGroupMemberException, GroupNotFoundException, GroupSendingNotAllowedException {
+    private SendMessageResults sendTypingMessage(
+            SignalServiceTypingMessage.Action action, Set<RecipientIdentifier> recipients
+    ) throws IOException, NotAGroupMemberException, GroupNotFoundException, GroupSendingNotAllowedException {
         var results = new HashMap<RecipientIdentifier, List<SendMessageResult>>();
         final var timestamp = System.currentTimeMillis();
         for (var recipient : recipients) {
-            if (recipient instanceof RecipientIdentifier.Single) {
+            if (recipient instanceof RecipientIdentifier.Single single) {
                 final var message = new SignalServiceTypingMessage(action, timestamp, Optional.empty());
                 try {
-                    final var recipientId = context.getRecipientHelper()
-                            .resolveRecipient(((RecipientIdentifier.Single) recipient));
+                    final var recipientId = context.getRecipientHelper().resolveRecipient(single);
                     final var result = context.getSendHelper().sendTypingMessage(message, recipientId);
                     results.put(recipient, List.of(toSendMessageResult(result)));
                 } catch (UnregisteredRecipientException e) {
-                    results.put(recipient, List.of(SendMessageResult.unregisteredFailure(
-                            ((RecipientIdentifier.Single) recipient).toPartialRecipientAddress())));
+                    results.put(recipient,
+                            List.of(SendMessageResult.unregisteredFailure(single.toPartialRecipientAddress())));
                 }
             } else if (recipient instanceof RecipientIdentifier.Group) {
                 final var groupId = ((RecipientIdentifier.Group) recipient).groupId();
                 final var message = new SignalServiceTypingMessage(action, timestamp, Optional.of(groupId.serialize()));
                 final var result = context.getSendHelper().sendGroupTypingMessage(message, groupId);
-                results.put(recipient, result.stream().map(this::toSendMessageResult).collect(Collectors.toList()));
+                results.put(recipient, result.stream().map(this::toSendMessageResult).toList());
             }
         }
         return new SendMessageResults(timestamp, results);
     }
 
     @Override
-    public SendMessageResults sendTypingMessage(TypingAction action, Set<RecipientIdentifier> recipients)
-            throws IOException, NotAGroupMemberException, GroupNotFoundException, GroupSendingNotAllowedException {
+    public SendMessageResults sendTypingMessage(
+            TypingAction action, Set<RecipientIdentifier> recipients
+    ) throws IOException, NotAGroupMemberException, GroupNotFoundException, GroupSendingNotAllowedException {
         return sendTypingMessage(action.toSignalService(), recipients);
     }
 
     @Override
-    public SendMessageResults sendReadReceipt(RecipientIdentifier.Single sender, List<Long> messageIds) {
+    public SendMessageResults sendReadReceipt(
+            RecipientIdentifier.Single sender, List<Long> messageIds
+    ) {
         final var timestamp = System.currentTimeMillis();
-        var receiptMessage = new SignalServiceReceiptMessage(SignalServiceReceiptMessage.Type.READ, messageIds,
+        var receiptMessage = new SignalServiceReceiptMessage(SignalServiceReceiptMessage.Type.READ,
+                messageIds,
                 timestamp);
 
         return sendReceiptMessage(sender, timestamp, receiptMessage);
     }
 
     @Override
-    public SendMessageResults sendViewedReceipt(RecipientIdentifier.Single sender, List<Long> messageIds) {
+    public SendMessageResults sendViewedReceipt(
+            RecipientIdentifier.Single sender, List<Long> messageIds
+    ) {
         final var timestamp = System.currentTimeMillis();
-        var receiptMessage = new SignalServiceReceiptMessage(SignalServiceReceiptMessage.Type.VIEWED, messageIds,
+        var receiptMessage = new SignalServiceReceiptMessage(SignalServiceReceiptMessage.Type.VIEWED,
+                messageIds,
                 timestamp);
 
         return sendReceiptMessage(sender, timestamp, receiptMessage);
     }
 
-    private SendMessageResults sendReceiptMessage(final RecipientIdentifier.Single sender, final long timestamp,
-            final SignalServiceReceiptMessage receiptMessage) {
+    private SendMessageResults sendReceiptMessage(
+            final RecipientIdentifier.Single sender,
+            final long timestamp,
+            final SignalServiceReceiptMessage receiptMessage
+    ) {
         try {
-            final var result = context.getSendHelper().sendReceiptMessage(receiptMessage,
-                    context.getRecipientHelper().resolveRecipient(sender));
+            final var result = context.getSendHelper()
+                    .sendReceiptMessage(receiptMessage, context.getRecipientHelper().resolveRecipient(sender));
             return new SendMessageResults(timestamp, Map.of(sender, List.of(toSendMessageResult(result))));
         } catch (UnregisteredRecipientException e) {
             return new SendMessageResults(timestamp,
@@ -522,9 +568,9 @@ class ManagerImpl implements Manager {
     }
 
     @Override
-    public SendMessageResults sendMessage(Message message, Set<RecipientIdentifier> recipients)
-            throws IOException, AttachmentInvalidException, NotAGroupMemberException, GroupNotFoundException,
-            GroupSendingNotAllowedException, UnregisteredRecipientException, InvalidStickerException {
+    public SendMessageResults sendMessage(
+            Message message, Set<RecipientIdentifier> recipients
+    ) throws IOException, AttachmentInvalidException, NotAGroupMemberException, GroupNotFoundException, GroupSendingNotAllowedException, UnregisteredRecipientException, InvalidStickerException {
         final var selfProfile = context.getProfileHelper().getSelfProfile();
         if (selfProfile == null || selfProfile.getDisplayName().isEmpty()) {
             logger.warn(
@@ -535,13 +581,13 @@ class ManagerImpl implements Manager {
         return sendMessage(messageBuilder, recipients);
     }
 
-    private void applyMessage(final SignalServiceDataMessage.Builder messageBuilder, final Message message)
-            throws AttachmentInvalidException, IOException, UnregisteredRecipientException, InvalidStickerException {
+    private void applyMessage(
+            final SignalServiceDataMessage.Builder messageBuilder, final Message message
+    ) throws AttachmentInvalidException, IOException, UnregisteredRecipientException, InvalidStickerException {
         if (message.messageText().length() > 2000) {
             final var messageBytes = message.messageText().getBytes(StandardCharsets.UTF_8);
-            final var textAttachment = AttachmentUtils.createAttachmentStream(
-                    new StreamDetails(new ByteArrayInputStream(messageBytes), MimeUtils.LONG_TEXT, messageBytes.length),
-                    Optional.empty());
+            final var textAttachment = AttachmentUtils.createAttachmentStream(new StreamDetails(new ByteArrayInputStream(
+                    messageBytes), MimeUtils.LONG_TEXT, messageBytes.length), Optional.empty());
             messageBuilder.withBody(message.messageText().substring(0, 2000));
             messageBuilder.withAttachment(context.getAttachmentHelper().uploadAttachment(textAttachment));
         } else {
@@ -559,8 +605,11 @@ class ManagerImpl implements Manager {
                     context.getRecipientHelper()
                             .resolveSignalServiceAddress(context.getRecipientHelper().resolveRecipient(quote.author()))
                             .getServiceId(),
-                    quote.message(), List.of(), resolveMentions(quote.mentions()),
-                    SignalServiceDataMessage.Quote.Type.NORMAL, List.of()));
+                    quote.message(),
+                    List.of(),
+                    resolveMentions(quote.mentions()),
+                    SignalServiceDataMessage.Quote.Type.NORMAL,
+                    List.of()));
         }
         if (message.sticker().isPresent()) {
             final var sticker = message.sticker().get();
@@ -580,18 +629,22 @@ class ManagerImpl implements Manager {
             if (streamDetails == null) {
                 throw new InvalidStickerException("Missing local sticker file");
             }
-            messageBuilder.withSticker(new SignalServiceDataMessage.Sticker(packId.serialize(), stickerPack.packKey(),
-                    stickerId, manifestSticker.emoji(),
+            messageBuilder.withSticker(new SignalServiceDataMessage.Sticker(packId.serialize(),
+                    stickerPack.packKey(),
+                    stickerId,
+                    manifestSticker.emoji(),
                     AttachmentUtils.createAttachmentStream(streamDetails, Optional.empty())));
         }
         if (message.previews().size() > 0) {
             final var previews = new ArrayList<SignalServicePreview>(message.previews().size());
             for (final var p : message.previews()) {
-                final var image = p.image().isPresent()
-                        ? context.getAttachmentHelper().uploadAttachment(p.image().get())
-                        : null;
-                previews.add(
-                        new SignalServicePreview(p.url(), p.title(), p.description(), 0, Optional.ofNullable(image)));
+                final var image = p.image().isPresent() ? context.getAttachmentHelper()
+                        .uploadAttachment(p.image().get()) : null;
+                previews.add(new SignalServicePreview(p.url(),
+                        p.title(),
+                        p.description(),
+                        0,
+                        Optional.ofNullable(image)));
             }
             messageBuilder.withPreviews(previews);
         }
@@ -600,72 +653,75 @@ class ManagerImpl implements Manager {
             final var authorServiceId = context.getRecipientHelper()
                     .resolveSignalServiceAddress(context.getRecipientHelper().resolveRecipient(storyReply.author()))
                     .getServiceId();
-            messageBuilder.withStoryContext(
-                    new SignalServiceDataMessage.StoryContext(authorServiceId, storyReply.timestamp()));
+            messageBuilder.withStoryContext(new SignalServiceDataMessage.StoryContext(authorServiceId,
+                    storyReply.timestamp()));
         }
     }
 
-    private ArrayList<SignalServiceDataMessage.Mention> resolveMentions(final List<Message.Mention> mentionList)
-            throws UnregisteredRecipientException {
+    private ArrayList<SignalServiceDataMessage.Mention> resolveMentions(final List<Message.Mention> mentionList) throws UnregisteredRecipientException {
         final var mentions = new ArrayList<SignalServiceDataMessage.Mention>();
         for (final var m : mentionList) {
             final var recipientId = context.getRecipientHelper().resolveRecipient(m.recipient());
-            mentions.add(new SignalServiceDataMessage.Mention(
-                    context.getRecipientHelper().resolveSignalServiceAddress(recipientId).getServiceId(), m.start(),
-                    m.length()));
+            mentions.add(new SignalServiceDataMessage.Mention(context.getRecipientHelper()
+                    .resolveSignalServiceAddress(recipientId)
+                    .getServiceId(), m.start(), m.length()));
         }
         return mentions;
     }
 
     @Override
-    public SendMessageResults sendRemoteDeleteMessage(long targetSentTimestamp, Set<RecipientIdentifier> recipients)
-            throws IOException, NotAGroupMemberException, GroupNotFoundException, GroupSendingNotAllowedException {
+    public SendMessageResults sendRemoteDeleteMessage(
+            long targetSentTimestamp, Set<RecipientIdentifier> recipients
+    ) throws IOException, NotAGroupMemberException, GroupNotFoundException, GroupSendingNotAllowedException {
         var delete = new SignalServiceDataMessage.RemoteDelete(targetSentTimestamp);
         final var messageBuilder = SignalServiceDataMessage.newBuilder().withRemoteDelete(delete);
         for (final var recipient : recipients) {
-            if (recipient instanceof RecipientIdentifier.Uuid) {
-                RecipientIdentifier.Uuid u = (RecipientIdentifier.Uuid) recipient;
-                account.getMessageSendLogStore().deleteEntryForRecipientNonGroup(targetSentTimestamp,
-                        ServiceId.from(u.uuid()));
-            } else if (recipient instanceof RecipientIdentifier.Single) {
-                RecipientIdentifier.Single r = (RecipientIdentifier.Single) recipient;
+            if (recipient instanceof RecipientIdentifier.Uuid u) {
+                account.getMessageSendLogStore()
+                        .deleteEntryForRecipientNonGroup(targetSentTimestamp, ServiceId.from(u.uuid()));
+            } else if (recipient instanceof RecipientIdentifier.Single r) {
                 try {
                     final var recipientId = context.getRecipientHelper().resolveRecipient(r);
                     final var address = account.getRecipientAddressResolver().resolveRecipientAddress(recipientId);
                     if (address.serviceId().isPresent()) {
-                        account.getMessageSendLogStore().deleteEntryForRecipientNonGroup(targetSentTimestamp,
-                                address.serviceId().get());
+                        account.getMessageSendLogStore()
+                                .deleteEntryForRecipientNonGroup(targetSentTimestamp, address.serviceId().get());
                     }
                 } catch (UnregisteredRecipientException ignored) {
                 }
-            } else if (recipient instanceof RecipientIdentifier.Group) {
-                account.getMessageSendLogStore().deleteEntryForGroup(targetSentTimestamp,
-                        ((RecipientIdentifier.Group) recipient).groupId());
+            } else if (recipient instanceof RecipientIdentifier.Group r) {
+                account.getMessageSendLogStore().deleteEntryForGroup(targetSentTimestamp, r.groupId());
             }
         }
         return sendMessage(messageBuilder, recipients);
     }
 
     @Override
-    public SendMessageResults sendMessageReaction(String emoji, boolean remove, RecipientIdentifier.Single targetAuthor,
-            long targetSentTimestamp, Set<RecipientIdentifier> recipients, final boolean isStory)
-            throws IOException, NotAGroupMemberException, GroupNotFoundException, GroupSendingNotAllowedException,
-            UnregisteredRecipientException {
+    public SendMessageResults sendMessageReaction(
+            String emoji,
+            boolean remove,
+            RecipientIdentifier.Single targetAuthor,
+            long targetSentTimestamp,
+            Set<RecipientIdentifier> recipients,
+            final boolean isStory
+    ) throws IOException, NotAGroupMemberException, GroupNotFoundException, GroupSendingNotAllowedException, UnregisteredRecipientException {
         var targetAuthorRecipientId = context.getRecipientHelper().resolveRecipient(targetAuthor);
-        final var authorServiceId = context.getRecipientHelper().resolveSignalServiceAddress(targetAuthorRecipientId)
+        final var authorServiceId = context.getRecipientHelper()
+                .resolveSignalServiceAddress(targetAuthorRecipientId)
                 .getServiceId();
         var reaction = new SignalServiceDataMessage.Reaction(emoji, remove, authorServiceId, targetSentTimestamp);
         final var messageBuilder = SignalServiceDataMessage.newBuilder().withReaction(reaction);
         if (isStory) {
-            messageBuilder
-                    .withStoryContext(new SignalServiceDataMessage.StoryContext(authorServiceId, targetSentTimestamp));
+            messageBuilder.withStoryContext(new SignalServiceDataMessage.StoryContext(authorServiceId,
+                    targetSentTimestamp));
         }
         return sendMessage(messageBuilder, recipients);
     }
 
     @Override
-    public SendMessageResults sendPaymentNotificationMessage(byte[] receipt, String note,
-            RecipientIdentifier.Single recipient) throws IOException {
+    public SendMessageResults sendPaymentNotificationMessage(
+            byte[] receipt, String note, RecipientIdentifier.Single recipient
+    ) throws IOException {
         final var paymentNotification = new SignalServiceDataMessage.PaymentNotification(receipt, note);
         final var payment = new SignalServiceDataMessage.Payment(paymentNotification, null);
         final var messageBuilder = SignalServiceDataMessage.newBuilder().withPayment(payment);
@@ -693,8 +749,10 @@ class ManagerImpl implements Manager {
                 } catch (UnregisteredRecipientException e) {
                     continue;
                 }
-                final var serviceId = context.getAccount().getRecipientAddressResolver()
-                        .resolveRecipientAddress(recipientId).serviceId();
+                final var serviceId = context.getAccount()
+                        .getRecipientAddressResolver()
+                        .resolveRecipientAddress(recipientId)
+                        .serviceId();
                 if (serviceId.isPresent()) {
                     account.getAciSessionStore().deleteAllSessions(serviceId.get());
                 }
@@ -719,18 +777,20 @@ class ManagerImpl implements Manager {
     }
 
     @Override
-    public void setContactName(RecipientIdentifier.Single recipient, String givenName, final String familyName)
-            throws NotPrimaryDeviceException, UnregisteredRecipientException {
+    public void setContactName(
+            RecipientIdentifier.Single recipient, String givenName, final String familyName
+    ) throws NotPrimaryDeviceException, UnregisteredRecipientException {
         if (!account.isPrimaryDevice()) {
             throw new NotPrimaryDeviceException();
         }
-        context.getContactHelper().setContactName(context.getRecipientHelper().resolveRecipient(recipient), givenName,
-                familyName);
+        context.getContactHelper()
+                .setContactName(context.getRecipientHelper().resolveRecipient(recipient), givenName, familyName);
     }
 
     @Override
-    public void setContactsBlocked(Collection<RecipientIdentifier.Single> recipients, boolean blocked)
-            throws NotPrimaryDeviceException, IOException, UnregisteredRecipientException {
+    public void setContactsBlocked(
+            Collection<RecipientIdentifier.Single> recipients, boolean blocked
+    ) throws NotPrimaryDeviceException, IOException, UnregisteredRecipientException {
         if (!account.isPrimaryDevice()) {
             throw new NotPrimaryDeviceException();
         }
@@ -746,8 +806,12 @@ class ManagerImpl implements Manager {
             }
             context.getContactHelper().setContactBlocked(recipientId, blocked);
             // if we don't have a common group with the blocked contact we need to rotate the profile key
-            shouldRotateProfileKey = blocked && (shouldRotateProfileKey || account.getGroupStore().getGroups().stream()
-                    .noneMatch(g -> g.isMember(selfRecipientId) && g.isMember(recipientId)));
+            shouldRotateProfileKey = blocked && (
+                    shouldRotateProfileKey || account.getGroupStore()
+                            .getGroups()
+                            .stream()
+                            .noneMatch(g -> g.isMember(selfRecipientId) && g.isMember(recipientId))
+            );
         }
         if (shouldRotateProfileKey) {
             context.getProfileHelper().rotateProfileKey();
@@ -756,8 +820,9 @@ class ManagerImpl implements Manager {
     }
 
     @Override
-    public void setGroupsBlocked(final Collection<GroupId> groupIds, final boolean blocked)
-            throws GroupNotFoundException, NotPrimaryDeviceException, IOException {
+    public void setGroupsBlocked(
+            final Collection<GroupId> groupIds, final boolean blocked
+    ) throws GroupNotFoundException, NotPrimaryDeviceException, IOException {
         if (!account.isPrimaryDevice()) {
             throw new NotPrimaryDeviceException();
         }
@@ -779,8 +844,9 @@ class ManagerImpl implements Manager {
     }
 
     @Override
-    public void setExpirationTimer(RecipientIdentifier.Single recipient, int messageExpirationTimer)
-            throws IOException, UnregisteredRecipientException {
+    public void setExpirationTimer(
+            RecipientIdentifier.Single recipient, int messageExpirationTimer
+    ) throws IOException, UnregisteredRecipientException {
         var recipientId = context.getRecipientHelper().resolveRecipient(recipient);
         context.getContactHelper().setExpirationTimer(recipientId, messageExpirationTimer);
         final var messageBuilder = SignalServiceDataMessage.newBuilder().asExpirationUpdate();
@@ -815,18 +881,19 @@ class ManagerImpl implements Manager {
                 try {
                     final var manifest = stickerPackStore.retrieveManifest(pack.packId());
                     return new org.asamk.signal.manager.api.StickerPack(pack.packId(),
-                            new StickerPackUrl(pack.packId(), pack.packKey()), pack.isInstalled(), manifest.title(),
+                            new StickerPackUrl(pack.packId(), pack.packKey()),
+                            pack.isInstalled(),
+                            manifest.title(),
                             manifest.author(),
                             Optional.ofNullable(manifest.cover() == null ? null : manifest.cover().toApi()),
-                            manifest.stickers().stream().map(JsonStickerPack.JsonSticker::toApi)
-                                    .collect(Collectors.toList()));
+                            manifest.stickers().stream().map(JsonStickerPack.JsonSticker::toApi).toList());
                 } catch (Exception e) {
                     logger.warn("Failed to read local sticker pack manifest: {}", e.getMessage(), e);
                 }
             }
 
             return new org.asamk.signal.manager.api.StickerPack(pack.packId(), pack.packKey(), pack.isInstalled());
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     @Override
@@ -926,13 +993,15 @@ class ManagerImpl implements Manager {
     }
 
     @Override
-    public void receiveMessages(Optional<Duration> timeout, Optional<Integer> maxMessages,
-            ReceiveMessageHandler handler) throws IOException, AlreadyReceivingException {
+    public void receiveMessages(
+            Optional<Duration> timeout, Optional<Integer> maxMessages, ReceiveMessageHandler handler
+    ) throws IOException, AlreadyReceivingException {
         receiveMessages(timeout.orElse(Duration.ofMinutes(1)), timeout.isPresent(), maxMessages.orElse(null), handler);
     }
 
-    private void receiveMessages(Duration timeout, boolean returnOnTimeout, Integer maxMessages,
-            ReceiveMessageHandler handler) throws IOException, AlreadyReceivingException {
+    private void receiveMessages(
+            Duration timeout, boolean returnOnTimeout, Integer maxMessages, ReceiveMessageHandler handler
+    ) throws IOException, AlreadyReceivingException {
         synchronized (messageHandlers) {
             if (isReceiving()) {
                 throw new AlreadyReceivingException("Already receiving message.");
@@ -983,8 +1052,12 @@ class ManagerImpl implements Manager {
     }
 
     @Override
-    public List<Recipient> getRecipients(boolean onlyContacts, Optional<Boolean> blocked,
-            Collection<RecipientIdentifier.Single> recipients, Optional<String> name) {
+    public List<Recipient> getRecipients(
+            boolean onlyContacts,
+            Optional<Boolean> blocked,
+            Collection<RecipientIdentifier.Single> recipients,
+            Optional<String> name
+    ) {
         final var recipientIds = recipients.stream().map(a -> {
             try {
                 return context.getRecipientHelper().resolveRecipient(a);
@@ -997,10 +1070,16 @@ class ManagerImpl implements Manager {
         }
         // refresh profiles of explicitly given recipients
         context.getProfileHelper().refreshRecipientProfiles(recipientIds);
-        return account.getRecipientStore().getRecipients(onlyContacts, blocked, recipientIds, name).stream()
-                .map(s -> new Recipient(s.getRecipientId(), s.getAddress().toApiRecipientAddress(), s.getContact(),
-                        s.getProfileKey(), s.getExpiringProfileKeyCredential(), s.getProfile()))
-                .collect(Collectors.toList());
+        return account.getRecipientStore()
+                .getRecipients(onlyContacts, blocked, recipientIds, name)
+                .stream()
+                .map(s -> new Recipient(s.getRecipientId(),
+                        s.getAddress().toApiRecipientAddress(),
+                        s.getContact(),
+                        s.getProfileKey(),
+                        s.getExpiringProfileKeyCredential(),
+                        s.getProfile()))
+                .toList();
     }
 
     @Override
@@ -1032,8 +1111,7 @@ class ManagerImpl implements Manager {
 
     @Override
     public List<Identity> getIdentities() {
-        return account.getIdentityKeyStore().getIdentities().stream().map(this::toIdentity)
-                .collect(Collectors.toList());
+        return account.getIdentityKeyStore().getIdentities().stream().map(this::toIdentity).toList();
     }
 
     private Identity toIdentity(final IdentityInfo identityInfo) {
@@ -1045,11 +1123,13 @@ class ManagerImpl implements Manager {
                 .resolveRecipientAddress(account.getRecipientResolver().resolveRecipient(identityInfo.getServiceId()));
         final var scannableFingerprint = context.getIdentityHelper()
                 .computeSafetyNumberForScanning(identityInfo.getServiceId(), identityInfo.getIdentityKey());
-        return new Identity(address.toApiRecipientAddress(), identityInfo.getIdentityKey(),
-                context.getIdentityHelper().computeSafetyNumber(identityInfo.getServiceId(),
-                        identityInfo.getIdentityKey()),
+        return new Identity(address.toApiRecipientAddress(),
+                identityInfo.getIdentityKey(),
+                context.getIdentityHelper()
+                        .computeSafetyNumber(identityInfo.getServiceId(), identityInfo.getIdentityKey()),
                 scannableFingerprint == null ? null : scannableFingerprint.getSerialized(),
-                identityInfo.getTrustLevel(), identityInfo.getDateAddedTimestamp());
+                identityInfo.getTrustLevel(),
+                identityInfo.getDateAddedTimestamp());
     }
 
     @Override
@@ -1070,21 +1150,24 @@ class ManagerImpl implements Manager {
     }
 
     @Override
-    public boolean trustIdentityVerified(RecipientIdentifier.Single recipient, byte[] fingerprint)
-            throws UnregisteredRecipientException {
+    public boolean trustIdentityVerified(
+            RecipientIdentifier.Single recipient, byte[] fingerprint
+    ) throws UnregisteredRecipientException {
         return trustIdentity(recipient, r -> context.getIdentityHelper().trustIdentityVerified(r, fingerprint));
     }
 
     @Override
-    public boolean trustIdentityVerifiedSafetyNumber(RecipientIdentifier.Single recipient, String safetyNumber)
-            throws UnregisteredRecipientException {
+    public boolean trustIdentityVerifiedSafetyNumber(
+            RecipientIdentifier.Single recipient, String safetyNumber
+    ) throws UnregisteredRecipientException {
         return trustIdentity(recipient,
                 r -> context.getIdentityHelper().trustIdentityVerifiedSafetyNumber(r, safetyNumber));
     }
 
     @Override
-    public boolean trustIdentityVerifiedSafetyNumber(RecipientIdentifier.Single recipient, byte[] safetyNumber)
-            throws UnregisteredRecipientException {
+    public boolean trustIdentityVerifiedSafetyNumber(
+            RecipientIdentifier.Single recipient, byte[] safetyNumber
+    ) throws UnregisteredRecipientException {
         return trustIdentity(recipient,
                 r -> context.getIdentityHelper().trustIdentityVerifiedSafetyNumber(r, safetyNumber));
     }
@@ -1094,8 +1177,9 @@ class ManagerImpl implements Manager {
         return trustIdentity(recipient, r -> context.getIdentityHelper().trustIdentityAllKeys(r));
     }
 
-    private boolean trustIdentity(RecipientIdentifier.Single recipient, Function<RecipientId, Boolean> trustMethod)
-            throws UnregisteredRecipientException {
+    private boolean trustIdentity(
+            RecipientIdentifier.Single recipient, Function<RecipientId, Boolean> trustMethod
+    ) throws UnregisteredRecipientException {
         final var recipientId = context.getRecipientHelper().resolveRecipient(recipient);
         final var updated = trustMethod.apply(recipientId);
         if (updated && this.isReceiving()) {
